--- a/Bugs/20171013/Main.fmx
+++ b/Bugs/20171013/Main.fmx
@@ -15,7 +15,7 @@ object Form1: TForm1
       end>
     Align = Client
     Size.Width = 555.000000000000000000
-    Size.Height = 518.000000000000000000
+    Size.Height = 584.000000000000000000
     Size.PlatformDefault = False
   end
   object ToolBar1: TToolBar
@@ -54,18 +54,20 @@ object Form1: TForm1
       OnChange = TrackBar1Change
     end
   end
-  object Panel1: TPanel
+  object Panel1: TLayout
     Align = Bottom
-    Position.Y = 566.000000000000000000
+    Position.Y = 632.000000000000000000
     Size.Width = 555.000000000000000000
-    Size.Height = 120.000000000000000000
+    Size.Height = 54.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 3
     object Button1: TButton
-      Position.X = 192.000000000000000000
-      Position.Y = 40.000000000000000000
+      Align = Center
+      Size.Width = 129.000000000000000000
+      Size.Height = 44.000000000000000000
+      Size.PlatformDefault = False
       TabOrder = 0
-      Text = 'Button1'
+      Text = 'Refresh'
       OnClick = TrackBar1Change
     end
   end
